<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/mrgn_0"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrgn_50"
                app:layout_collapseMode="parallax"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/latest_news"
                        android:layout_width="@dimen/mrgn_0"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/mrgn_10"
                        android:layout_marginTop="@dimen/mrgn_10"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/new_york_small"
                        android:text="@string/latest_news"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_22"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/mrgn_15"
                        android:layout_weight="0"
                        android:text="@string/see_full"
                        android:textColor="@color/color_seefull_text"
                        android:textSize="@dimen/txt_15" />

                    <ImageView
                        android:id="@+id/forwardArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/mrgn_12"

                        android:layout_weight="0.1"
                        android:src="@drawable/ic_arrow_forward" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPagerID"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ht_240"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/mrgn_8"
                        android:layout_marginTop="@dimen/mrgn_10" />


                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tollbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ht_50"
                android:visibility="visible"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/mrgn_10"
                    android:layout_marginEnd="@dimen/mrgn_10"
                    android:layout_marginTop="@dimen/mrgn_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/wdth_33"
                        android:layout_height="@dimen/ht_36"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_bell_notification" />

                    <EditText
                        android:id="@+id/search_ET"
                        android:layout_width="@dimen/wdth_250"
                        android:layout_height="@dimen/ht_36"
                        android:background="@null"
                        android:hint="@string/dogecoin_to_the_moon"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingLeft="@dimen/mrgn_10"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="@dimen/ht_36"
                        android:layout_height="@dimen/ht_36"
                        android:layout_toRightOf="@id/search_ET"
                        android:padding="@dimen/mrgn_8"
                        android:src="@drawable/ic_search_icon" />


                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/contentlayout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="@dimen/wdth_289"
        android:layout_height="@dimen/ht_66"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/mrgn_40"
        android:background="@drawable/ic_bottom_nav_bg1"
        android:scrollIndicators="left"
        app:itemIconTint="@drawable/bottom_nav_item_color"
        app:menu="@menu/bottom_nav_menu" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

